Fix up spacing on the our house page

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -15,7 +15,7 @@ $accentBrown: #C69785;
 
 /* Globals */
 *    { box-sizing: border-box; }
-body { font-family: 'Questrial', Helvetica, sans-serif; visibility: visible; }
+body { font-family: 'Questrial', Helvetica, sans-serif; visibility: visible; margin: 0; }
 a    { cursor: pointer; }
 
 /* Page Layout */
@@ -23,7 +23,7 @@ h1              { text-align: center; margin: 0; padding-top: 11px; line-height:
 h1.singleLine   { padding-top: 19px; }
 h1 img          { width: 141px; }
 section         { border-top: $greyLine; font-size: 16px; line-height: 20px; }
-section.context { line-height: 15px; color: #838386; padding: 0 20px; text-align: center}
+section.context { color: #838386; padding: 0 20px; text-align: center}
 .hero           { display: none; }
 .nightshade     { opacity: 0.8; background-color: black; position: fixed; left: 0; top: 0; bottom: 0; right: 0; display: none; }
 body.hamburgerOpen .nightshade { display: block; }
@@ -70,7 +70,7 @@ header.withHeading .logoLink { display: none; }
 .ideas .failure a { position: absolute; bottom: 0; right: 0; left: 0; background-color: #D17059; color: #fff; text-decoration: center; padding: 11px 0 14px; border-radius: 0 0 8px 8px; text-decoration: none; }
 
 /* Our House Page */
-section.house { font-size: 16px; color: #838386; }
+section.house { font-size: 16px; color: #838386; padding-bottom: 1.4em; }
 section.house img { width: 100%; }
 section.house p { margin: 20px 22px; &:first-child { margin-left: 100px; margin-right: 100px; } }
 
